# join-the-siege

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: openai_experiments.ipynb  second_classifier_iteration_experiment.ipynb
src/: classifier.py  openai_clf.py  prompts.py  sklearn_clf.py  types.py  utils.py
src/data/: bank_statement_1.py  drivers_licence_1.py  invoice_1.py
terraform/: main.tf  variables.tf
tests/: test_openai_clf.py  test_preprocessing.py
tests/data/: bank_statement_1.txt  drivers_licence_1.txt  invoice_1.txt
