[project]
name = "join-the-siege"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "flask>=3.0.3",
    "openai>=1.54.4",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "jupyterlab>=4.3.0",
    "pypdf>=5.1.0",
    "pytesseract>=0.3.13",
    "pydantic>=2.9.2",
    "transformers>=4.46.2",
    "spacy<3.8",
    "numpy<2",
    "scikit-learn>=1.5.2",
]
